third_party/move/move-compiler-v2/tests/recursive-instantiation-checker/v1-tests/recursive_infinite_type_terminates.exp

Diagnostics:
error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/recursive_infinite_type_terminates.move:9:9
  │
9 │     fun f<T>(n: u64, x: T): T {
  │         ^
  │
  = `f<T>` calls `f<M::Box<T>>` at tests/recursive-instantiation-checker/v1-tests/recursive_infinite_type_terminates.move:9,
    A cycle of recursive calls causes the instantiation to recurse infinitely.
